# CSM-Lance-Dev

./: .gitmodules  CMakeLists.txt  README.md  package.xml
aruco_server/: CMakeLists.txt  package.xml
aruco_server/config/: params.yaml
aruco_server/launch/: aruco_server.launch.py
aruco_server/src/: aruco_node.cpp
camera_utils/: CMakeLists.txt  package.xml
camera_utils/config/arducam1/: calibration.yaml  params.yaml
camera_utils/config/arducam_w/: calibration.yaml  params.yaml
camera_utils/config/axis_m1034w/: calibration.yaml  params.yaml
camera_utils/config/lifecam/: calibration.yaml  params.yaml
camera_utils/config/uvc1/: calibration.yaml  params.yaml
camera_utils/config/webcam/: calibration.yaml  params.yaml
camera_utils/launch/: calibrate.launch.py  camera_driver.launch.py  run_ip.launch.py  run_usb.launch.py
config/: dlio.yaml  dlo.yaml  fast_lio.yaml  lance_gz_bridge.yaml  lidarslam.yaml  sim.rviz  xbox_controller.yaml
debug_tools/: .gitignore  CMakeLists.txt  package.xml
debug_tools/include/: geometry.hpp
debug_tools/msg/: AccuracyAnalysis.msg
debug_tools/src/: accuracy_analyzer.cpp  imu_transformer.cpp  imu_visualizer.cpp  scan_transformer.cpp
description/: lance.urdf  lance.xacro  robot.urdf.xacro
description/lance/: model.sdf
description/sdf/lance/: model.config  model.sdf
lance_live/: CMakeLists.txt  package.xml
lance_live/config/: cardinal_perception.yaml  foxglove_bridge.yaml  sick_multiscan.xml  sim.rviz
lance_live/launch/: testing.launch.py
lance_sim/: CMakeLists.txt  package.xml
lance_sim/config/: dlio.yaml  dlo.yaml  fast_lio.yaml  foxglove_studio.json  lance_gz_bridge.yaml  nav2.yaml  nav2_mapping.yaml  robot_localization.yaml  sim.rviz
lance_sim/config/glim/: config.json  preprocess.json  ros.json  sensors.json  viewer.json
lance_sim/config/glim/odometry/: gpu_config.json
lance_sim/config/glim/sub_mapping/: gpu_config.json
lance_sim/description/: lance.urdf
lance_sim/description/lance/: model.sdf
lance_sim/launch/: robot_state_publisher.launch.py  sim.launch.py  sim_coprocessor.launch.py  sim_gazebo.launch.py  sim_remote.launch.py  sim_server.launch.py  slam.launch.py  spawn_lance.launch.py
lance_sim/worlds/: arch-arena.world  artemis-arena.world  maze.world  moon.world
lance_sim/worlds/meshes/: artemis-arena-collision.stl  artemis-arena-dummy-surface.dae  artemis-arena-starting-zone-2.dae  artemis-arena-starting-zone-collision.stl  artemis-arena-starting-zone.dae  lunar-terrain.stl  maze.dae  maze.stl
launch/: artemis_arena_sim.launch.py  joy_control.launch.py  robot_state_publisher.launch.py  rsp.launch.py  sim.launch.py  sim_remote.launch.py  sim_server.launch.py  slam.launch.py  spawn_lance.launch.py
perception_dev/: CMakeLists.txt  package.xml
perception_dev/config/: cardinal_perception_live.yaml  localization_live.yaml  mola-lidar3d-default.yaml  mola-lo.yaml  multiscan_driver.yaml  nvblox.yaml  octomap.yaml  sick_multiscan.launch  sick_multiscan_default.launch  tag_detection_live.yaml
perception_dev/config/cameras/: front_left.yaml  front_mid.yaml  front_right.yaml
perception_dev/launch/: foxglove.launch.py  live.launch.py  nvblox.launch.py  perception.launch.py  replay.launch.py  rerecord.launch.py  sim.launch.py  sim_coprocessor.launch.py  sim_main.launch.py  tag_detection_live.launch.py
ros_gz_example_bringup/config/: ros_gz_example_bridge_lance.yaml
ros_gz_example_bringup/launch/: lance.launch.py
ros_gz_example_description/models/lance/: model.sdf
ros_gz_example_description/models/lance/meshes/: lance-2024-frame-collision.stl  lance-2024-left-track-collision.stl  lance-2024-right-track-collision.stl
ros_gz_example_description/models/test/: model.sdf
ros_gz_example_gazebo/worlds/: lance.sdf
ros_gz_example_gazebo/worlds/meshes/: artemis-arena-collision.stl
src/rectifier/: rectifier.cpp
worlds/: arena.sdf  artemis-arena.world
worlds/sdf/: lance.sdf
