<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lance_sim</name>
  <version>0.0.1</version>
  <description>LANCE (2024) Simulation</description>
  <maintainer email="samrichter888@email.com">Sam Richter</maintainer>
  <license>TODO: License declaration</license>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <!-- <depend>fast_lio</depend> -->
  <depend>direct_lidar_inertial_odometry</depend>
  <!-- <depend>lidarslam</depend> -->
  <depend>direct_lidar_odometry</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
