<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lance_sim</name>
  <version>0.0.1</version>
  <description>LANCE (2024) Simulation</description>
  <maintainer email="samrichter888@email.com">Sam Richter</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <!-- <depend>rclcpp_components</depend> -->
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>
  <!-- <depend>aruco_server</depend> -->
  <!-- <depend>fast_lio</depend> -->
  <!-- <depend>direct_lidar_inertial_odometry</depend> -->
  <!-- <depend>lidarslam</depend> -->
  <depend>cardinal_perception</depend>
  <!-- <depend>robot_localization</depend> -->
  <depend>foxglove_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
